Tried to improve usability issues in bottom menu (changed to 'result webpage (click for resizing)'; made create and delete buttons always visible, but disabled state changes)

--- a/position_and_dimensions/demoCSS.css
+++ b/position_and_dimensions/demoCSS.css
@@ -175,25 +175,29 @@ body {
 	border-left: solid 1px #bbb;
 	min-width: 225px;
 	max-width: 225px;
-	padding-top: 17px;
+	/*padding-top: 17px;*/
+	padding-top: 8px;
 }
 
 #cloneButton {
-	display: none;
+	/*display: none;*/	
 }
 
 #viewOnlyArea {
 	border-left: solid 1px #bbb;
-	padding-top: 25px;
+	/*padding-top: 25px;*/
+	padding-top: 16px;
 }
 
 .keyframeButton {
-	margin-top: 10px;
+	/*margin-top: 10px;*/
 	margin-right: 10px;
 	margin-left: 10px;
 }
 
-
+#deleteButton {
+	margin-top: 8px;
+}
 
 
 /* Some copied from jquery-ui: https://jqueryui.com/selectmenu/#custom_render */
@@ -266,6 +270,10 @@ fieldset {
 	display: none;
 }
 
-[type='radio'] {
+/*[type='radio'] {
 	font-size: 15px;
+}*/
+
+#toolsMenu {
+	font-size: 14px;
 }
